# etut-go

./: .gitignore  DEMO_GIRIS.md  KURULUM_REHBERI.txt  setup-demo.sh
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 01235dabd498_add_tax_fields_to_institution.py  06136214cefa_add_priority_pinned_expires_to_.py  0df95a60de10_add_parent_to_userrole_enum.py  145d8b296d06_redesign_group_model.py  1c97e88a9b6d_add_student_fields_and_guardians_table.py  228be26a96ac_add_subject_color_and_notes_user_notes_.py  2c62d25e063a_add_payments_table.py  35a75fe9d15e_fix_announcementtarget_parent_uppercase.py  465f7b4db2f2_add_credit_fields_and_update_private_.py  4b4e102b3fb7_add_leads_and_lead_notes_tables.py  4e54d56dd5ba_replace_teacher_subjects_with_single_.py  4f37e07642bc_make_audit_log_institution_id_nullable.py  850045aead06_initial_schema.py  86ae9ae04659_add_teacher_fields_and_availability.py  9e8e29bed36e_remove_student_financial_fields.py  b35bf78d6e53_add_conversations_and_messages_tables.py  bae61520a566_add_expenses_teacher_payments_and_cash_.py  bf27c7a0e393_add_parent_to_announcement_target_enum.py  c483013e94d9_add_attendance_table.py  (+6 more)
backend/app/: main.py
backend/scripts/: create_superadmin.py  seed_demo_data.py
backend/tests/: conftest.py  test_admin_announcements.py  test_admin_attendance.py  test_admin_dashboard.py  test_admin_endpoints_deep.py  test_admin_expenses.py  test_admin_groups.py  test_admin_leads.py  test_admin_misc.py  test_admin_more_coverage.py  test_admin_payments.py  test_admin_roles.py  test_admin_schedules.py  test_admin_students.py  test_admin_subjects.py  test_admin_teachers.py  test_auth.py  test_coverage_boost.py  test_coverage_final.py  test_coverage_push.py  test_health.py  test_notifications.py  test_parent_endpoints_deep.py  test_parent_portal.py  test_security.py  test_student_endpoints_deep.py  test_student_portal.py  test_superadmin.py  test_teacher_endpoints_deep.py  test_teacher_portal.py
(+157 files in other folders)
