[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.2",
    "bcrypt>=4.0,<5",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.12.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
    "python-dateutil>=2.9.0.post0",
    "python-multipart>=0.0.22",
    "google-genai>=1.69.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "types-python-dateutil>=2.9.0.20260323",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E",
    "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "SIM",
    "S",
    "A",
    "C4",
    "DTZ",
    "T20",
    "RET",
    "PTH",
    "ERA",
    "RUF",
]
ignore = [
    "S104",
    "S105",
    "B008",
    "RUF001",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101"]
"alembic/**/*.py" = ["E501", "UP007", "UP035", "I001", "W291", "RUF100", "F401", "F403", "ERA001"]
"scripts/**/*.py" = ["S101", "S105", "S311", "E501", "T20", "ERA001", "I001", "F401", "UP035", "DTZ", "B008", "SIM", "RET", "C4", "N", "A", "PTH", "RUF001", "RUF002", "RUF100", "B007"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
plugins = ["pydantic.mypy"]
exclude = ["alembic/", "tests/", "scripts/"]

[[tool.mypy.overrides]]
module = "google.*"
ignore_missing_imports = true

[tool.coverage.run]
concurrency = ["greenlet", "thread"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
